# shio

./: README.md
rs/: Cargo.toml
rs/src/: bids.rs  data_listener.rs  main.rs  utils.rs
ts/: README.md  package.json
ts/src/: main.ts
