[package]
name = "shio_mev_clent"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.24"
tokio-native-tls = "0.3"
serde_json = "1.0"
native-tls = "0.2"
futures-util = "0.3"
url = "2.2.2"
rand = "0.8.5"
chrono = "0.4.38"
reqwest = { version = "0.12.9", features = ["json"] }
# shared_crypto = { git = "https://github.com/MystenLabs/shared-crypto" }
shared_crypto = { git = "https://github.com/mystenlabs/sui", package = "shared-crypto" }
sui-types = { git = "https://github.com/mystenlabs/sui", package = "sui-types" }
fastcrypto = { git = "https://github.com/MystenLabs/fastcrypto", rev = "69d496c71fb37e3d22fe85e5bbfd4256d61422b9" }
sui_sdk = { git = "https://github.com/mystenlabs/sui", package = "sui-sdk" }
sui-sdk-types = "0.0.1"
sui-crypto = "0.0.1"
anyhow = "1.0.93"
bcs = "0.1.4"
base64 = "0.22.1"
